               bug.
20070228 code: added sd-longlong sysdep. added HAVE_LONGLONG test to
               fmt and scan headers for better C90 compatibility.
20070228 code: added uint.
20070313 code: fixed uint...
20070320 code: iarray_sort and improved iarray tests.
20070322 code: fmt_float fmt_double
20070324 code: ht_clear_ext() no longer calls free(). thanks JN.
20070324 code: improved scan_double() tests.
20070324 code: scan_float() and scan_double() now accept scientific
               notation.
20070324 code: improved scan_fspec tests.
20070324 code: fixed double free() in ht_clear()
20070324 code: large test cleanup
20070324 code: scan_u*b() and re-wrote all scan tests.
20070118 version: corelib 0.531
20070326 code: renamed seek to fd_seek to clear possible name conflicts.
20070326 code: solaris 9 fixes for math related functions.
20070327 code: rewrite fmt_double() and fmt_float for scientific
               precision.
20070328 code: full tests for fmt_double() and fmt_float().
20070328 code: sysdeps update.
20070408 code: array_data.o was not being compiled. fixed.
20070408 code: cleaned up alloc.c and added alloc_zero().
20070409 code: API changes for hashtable. cleanups.
20070409 code: syserr updated to allow eight string arguments instead of six.
20070416 code: updated hashtable interface ht_callback to take key and keylen
               parameters.
20070427 code: library should now no longer leak implementation details,
               allowing the client code to be compiled with a different
               compiler than the library was compiled with, reliably.
20070427 code: seperated fixed sized integer functions into seperate
               integers package.
20070428 code: fixed scan_u*b() undefined behaviour.
20070430 code: sig now uses ANSI C sa_handler prototype.
20070501 code: fd_seek now uses off_t.
20070501 package: sd_*.h and _sd*.h are now no longer installed, to prevent
                  any possibility of header collisions.